--- a/view/index.html
+++ b/view/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <script>
-        const API = 'https://sheetdb.io/api/v1/nsqoeik98h24?sheet=strikes';
+        const API = 'https://sheetdb.io/api/v1/nsqoeik98h24t';
 
         function show(id) {
             const card = document.getElementById(id);
