--- a/view/index.html
+++ b/view/index.html
@@ -51,7 +51,7 @@
         </div>
     </div>
     <script>
-        const API = 'https://sheetdb.io/api/v1/nsqoeik98h24t';
+        const API = 'https://script.google.com/macros/s/AKfycbzrETK92Nwrb_A6b6ezp41oZNR_rTJRxFHTwmLoaBMwaqSPGoD_K-sw631jYghmyjAd/exec';
         function showSection(id, el) {
             document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
             document.querySelectorAll('.nav-item').forEach(n => n.classList.remove('active'));
