--- a/view/index.html
+++ b/view/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <script>
-        const API = 'https://script.google.com/macros/s/AKfycbyGipapObdry9qy39Zj1vY2_gRKRLm9KIDNqclRishFkhaBAutKVlcTYuuVPwnIpTwvyQ/exec';
+        const API = 'https://docs.google.com/spreadsheets/d/18I77ouNoyP6nFrztwDTXDRVj3iKTEXE-zzTPbDdPdU8/edit#gid=0';
 
         function showSection(id, el) {
             document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
