--- a/view/index.html
+++ b/view/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <script>
-        const API = 'https://docs.google.com/spreadsheets/d/18I77ouNoyP6nFrztwDTXDRVj3iKTEXE-zzTPbDdPdU8/edit#gid=0';
+        const API = 'https://sheetdb.io/api/v1/nsqoeik98h24t';
 
         function showSection(id, el) {
             document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
